Update budgie settings window padding The applet inline toolbar padding was too large - resolve this. The settings frame needs as slight padding to prevent objects like buttons at the bottom of the window having truncated borders

--- a/src/gtk-3.0/sass/apps/_budgie.scss
+++ b/src/gtk-3.0/sass/apps/_budgie.scss
@@ -17,13 +17,19 @@
   background-color: transparent;
 }
 
-.budgie-settings-window buttonbox.inline-toolbar {
-  border-style: none none solid;
+.budgie-settings-window {
+  buttonbox.inline-toolbar {
+    border-style: none none solid;
+    padding: 0px;
 
-  button {
-    border-radius: theme.$corner-radius;
+    button {
+      border-radius: theme.$corner-radius;
 
-    @extend %button-flat-basic;
+      @extend %button-flat-basic;
+    }
+  }
+  .settings-frame {
+    padding: 2px;
   }
 }
 
